--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/bot.py",
+      "src": "bot.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/bot.py"
+      "dest": "bot.py"
     }
-  ],
-  "functions": {
-    "api/bot.py": {
-      "maxDuration": 30
-    }
-  }
+  ]
 }
